--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "ng test",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
     "storybook": "npm run docs:json && start-storybook -p 6006",
-    "build-storybook": "npm run docs:json && build-storybook"
+    "build-storybook": "npm run docs:json && build-storybook",
+    "chromatic": "npx chromatic --project-token=42f62c9bf2f4",
+    "test-storybook": "test-storybook"
   },
   "private": true,
   "dependencies": {
@@ -31,22 +33,29 @@
     "@angular/compiler-cli": "^14.0.0",
     "@babel/core": "^7.18.9",
     "@compodoc/compodoc": "^1.1.19",
+    "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
+    "@storybook/addon-storyshots": "^6.5.9",
     "@storybook/angular": "^6.5.9",
     "@storybook/builder-webpack5": "^6.5.9",
     "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/test-runner": "^0.5.0",
     "@storybook/testing-library": "^0.0.13",
     "@types/jasmine": "~4.0.0",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.7.1",
     "jasmine-core": "~4.1.0",
+    "jest": "^27.5.1",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.7.2"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "storybook-project@0.0.0"
 }
