Storybook-static Push

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/jesh22/StorybookProject",
   "name": "storybook-project",
   "version": "0.0.0",
   "scripts": {
